2006-10-08  Joe Casadonte  <jcasadonte@northbound-train.com>
	* tnt.el: Strip off :::::w from nicks
	* toc.el: Strip off leading trash in `toc-handle-receive'

2006-10-08  Joe Casadonte  <jcasadonte@northbound-train.com>
	* tnt.el: Added a chunk-size variable to make single-file archives
		  a little more efficient

2006-10-08  Joe Casadonte  <jcasadonte@northbound-train.com>
	* tnt.el: Added a never-unidle ability (good for hiding)
	Added optional login ID string in buddy list (for debugging).
	Added pre- and post-open hooks.
	Added key to refresh buddy buffer.

2006-06-25  Joe Casadonte  <jcasadonte@northbound-train.com>
	* tnt.el: Added stuff in to handle the new annoying NICK madness.

2006-03-28  Scott Evans  <gse@SALON2>
	* toc.el: change version number to 2.6
	* toc.el: comment out debug for release
	* tocstr.el: comment out debug for release
	* README: minor updates
	* PROTOCOL: add pointers to TOC2 pages
	* Makefile: deleted

2006-02-12  Joe Casadonte  <jcasadonte@northbound-train.com>
	* toc.el: added more debugging info for unknown commands

2006-02-12  Joe Casadonte  <jcasadonte@northbound-train.com>
	* tnt.el: added support for HTTP proxy
	* tocstr.el: added support for HTTP proxy
	* tnt-proxy.el: (new file) support for HTTP proxy
	* ArtisticLicense.txt: (new file) License file for tnt-proxy.el

2006-02-12  Joe Casadonte  <jcasadonte@northbound-train.com>
	* tnt.el: added optional mode-line indicator for idleness

2005-09-19  Joe Casadonte  <jcasadonte@northbound-train.com>
	* tnt.el: Made flyspell-mode support much more light-weight

2005-09-18  Joe Casadonte  <jcasadonte@northbound-train.com>
	* tnt.el: Added support for flyspell-mode
	Turned Emacs/XEmacs read-only code into a function to be reuseable.
	Minor function documentation change to `tnt-fullname-for-nick'.
	Using fullnames in Typing Notifications.
	Make IM/Chat buffer headers read-only from the get-go.

2005-09-07  Joe Casadonte  <jcasadonte@northbound-train.com>